# rocketdoo

./: .gitignore  Dockerfile  Dockerfile.jinja  LICENSE  MANIFEST.in  README.md  __init__.py  config.py  config_gitman.py  copier.yaml  docker-compose.yml  docker-compose.yml.jinja  gitman.yml  main.py  pyproject.toml  requirements.txt  rocket.py  rocketdoo.py  run.sh  setup.py
.github/: FUNDING.yml
.github/workflows/: publish-rkd.yml
.ssh/: rsa  rsa.pub
config/: odoo.conf  odoo.conf.jinja
core/: __init__.py  edition_setup.py  gitman_config.py  port_validation.py  ssh_manager.py  utils.py
rocketdoo/: .gitignore  Dockerfile  Dockerfile.jinja  README.md  __init__.py  cli.py  config.py  copier.yaml  delete_identifiers.py  deploy_cli.py  docker-compose.yml  docker-compose.yml.jinja  docker_cli.py  init_project.py  main.py  project_info.py  rocketdoo.py  scaffold.py  welcome.py
rocketdoo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rocketdoo/.devcontainer/: devcontainer.json
rocketdoo/config/: odoo.conf  odoo.conf.jinja
rocketdoo/core/: __init__.py  config_loader.py  edition_setup.py  generator.py  gitman_config.py  module_scanner.py  port_validation.py  utils.py
rocketdoo/core/deploy/: __init__.py  base.py  config_manager.py  module_packager.py  odoo_sh.py  vps.py
rocketdoo/templates/: Dockerfile.jinja  docker-compose.yaml.jinja  docker-compose.yml.jinja  install_dependencies.sh
rocketdoo/templates/.devcontainer/: devcontainer.json  docker-compose.yaml
rocketdoo/templates/deploy/: .deployignore  (+1 more)
templates/: Dockerfile.jinja
