[project]
name = "rocketdoo"
version = "2.0.0b1"
description = "Framework para crear entornos de desarrollo de Odoo con Docker y plantillas personalizadas."
authors = [
    { name = "Horacio Montaño", email = "horaciomontano@hdmsoft.com.ar" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "copier>=9.2.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0"
]

[project.scripts]
rocketdoo = "rocketdoo.cli:main"
rkd = "rocketdoo.cli:main"

# setuptools encontrará automáticamente el paquete rocketdoo en la raíz

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"