[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketdoo"
version = "1.3.1"
description = "This library allows you to build an automated local development environment for Odoo EE and CE."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Horacio Montaño", email = "horaciomontano@hdmsoft.com.ar" },
  { name = "Elias Braceras" }
]
license = { text = "LGPL-3.0-or-later" }
dependencies = ["copier"]

[project.urls]
Homepage = "https://github.com/HDM-soft/rocketdoo"

[project.scripts]
rocketdoo = "rocketdoo.main:cli"

[tool.setuptools]
license-files = ["LICENSE"]
